Updated readLongValue() to use the Long.valueOf() method instead of new Long(), which is less efficient.